[package]
name = "jstr"
version = "0.1.1"
authors = ["Zach Schoenberger <zschoenb@gmail.com>"]
edition = "2018"
description = "a very basic json parser(ish) that does not copy data/duplicate data"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
